--- a/Illumina_QC/02-Cluster_Introduction.Rmd
+++ b/Illumina_QC/02-Cluster_Introduction.Rmd
@@ -26,8 +26,8 @@ In our case the terminal window looks like the picture below. We are using the t
 
 Already there is useful information for us on the terminal window.
 
-- __nsc065__: This is the login name, also known as the username. Your screen will show your username for the Linux machine/cluster you are logged into.
-- __gauss03__: This is the machine name the user is logged into.
+- __nsc206__: This is the login name, also known as the username. Your screen will show your username for the Linux machine/cluster you are logged into.
+- __ada02__: This is the machine name the user is logged into.
 - __\~__: This represents the current directory of the user, or the directory a command was run in. In the Linux OS and others __\'~\'__ is a shortcut to the user's home directory.
 - Everything after the __\'$\'__ is where commands are typed into the terminal. This is also referred to as the command line.
 
